chore: Add TDD dashboard documentation and update extension packages

--- a/vscode-extension/todo.txt
+++ b/vscode-extension/todo.txt
@@ -22,18 +22,20 @@
 - [x] Integrate task_relevance with tdd_evaluator.py
 - [x] Add language-specific test templates
 - [x] Implement more adaptable test generation strategies
-- [ ] Create better task analysis to generate relevant tests
-- [ ] Implement test quality metrics
+- [x] Create better task analysis to generate relevant tests
+- [x] Implement test quality metrics
 
 ## Phase 4: Improve User Experience
-- [ ] Create a TDD dashboard panel in VS Code
-- [ ] Add real-time test progress visualization
-- [ ] Implement test coverage highlighting
-- [ ] Add configuration options for TDD behavior
-- [ ] Create interactive test result displays
+- [x] Create a TDD dashboard panel in VS Code
+- [x] Add real-time test progress visualization
+- [x] Implement test coverage highlighting
+- [x] Add configuration options for TDD behavior
+- [x] Create interactive test result displays
 
 ## Phase 5: Performance Optimizations
-- [ ] Implement test result caching
+- [x] Implement test result caching
 - [ ] Add parallel test generation where possible
 - [ ] Implement incremental testing for small changes
 - [x] Optimize communications between extension and backend
+- [x] Fix heartbeat functionality in optimized MCP client
+- [x] Consolidate to MCP-only architecture (remove REST API fallback)
